fscMigration/force-app/main/default/objects/Field_setup__c/fields/Destination_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field_Name__c</fullName>
    <label>Destination Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>