fscMigration/force-app/main/default/objects/Field_setup__c/fields/Object_setup_name__c.field-meta.xml
<CustomField>
    <fullName>Object_setup_name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Object setup name</label>
    <referenceTo>Object_setup__c</referenceTo>
    <relationshipLabel>Field setups</relationshipLabel>
    <relationshipName>Field_setups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>