fscMigration/force-app/main/default/objects/Field_setup__c/fields/Souce_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Souce_Field_Api_Name__c</fullName>
    <externalId>true</externalId>
    <label>Souce Field Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>